samples/_failures_safe/1761303243_1c4c46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_604289da.c: In function ‘main’:
./samples/SAFE/__tmp_604289da.c:160:13: error: expected declaration or statement at end of input
  160 |             Matrix b;
      |             ^~~~~~
./samples/SAFE/__tmp_604289da.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_604289da.c:160:13: error: expected declaration or statement at end of input
